--- a/templates/adminbase.html
+++ b/templates/adminbase.html
@@ -8,6 +8,7 @@
     {% block title %}{% endblock title %}
     
     <link rel="stylesheet" href="{% static 'css/admin_base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/breadcrumbs.css' %}">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     
@@ -87,7 +88,6 @@
                     </a>
                 </li>
             </ul>
-            
             <div class="sidebar-footer">
                 <a href="{% url 'admin_logout' %}">
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
@@ -115,8 +115,15 @@
                 </div>
             </header>
             
+            
             <main class="content-area">
+                {% if breadcrumbs %}
+                <div class="container breadcrumbs-container">
+                    {% include "dynamic_breadcrumbs/breadcrumbs.html" with breadcrumbs=breadcrumbs|slice:"1:" %}
+                </div>
+            {% endif %}
                 {% block content %}
+            
                 {% endblock content %}
             </main>
         </div>
