--- a/Admin/templates/categorys/admin_category_form.html
+++ b/Admin/templates/categorys/admin_category_form.html
@@ -10,20 +10,31 @@
     <h2>{% if category.id %}Edit Category{% else %}Add New Category{% endif %}</h2>
     
     <form method="post" novalidate>
-        {% csrf_token %}
+          {% csrf_token %}
+        {% if form.non_field_errors %}
+            <div class="errors">
+            {{ form.non_field_errors }}
+            </div>
+        {% endif %}
 
         <div>
-            <label for="id_name">Category Name:</label>
-            <input type="text" name="name" id="id_name" value={% if category.id %}{{category.name}}{% endif %}>
-            </div>
-        
+            <label for="{{ form.name.id_for_label }}">Name</label>
+            {{ form.name }}
+            {% for err in form.name.errors %}
+            <div class="field-error">{{ err }}</div>
+            {% endfor %}
+        </div>
+
         <div>
-            <label for="id_description">Description:</label>
-            <textarea name="description" id="id_description" rows="4">{% if category.id %}{{ category.description }}{% endif %}</textarea>
-            </div>
-        
+            <label for="{{ form.description.id_for_label }}">Description</label>
+            {{ form.description }}
+            {% for err in form.description.errors %}
+            <div class="field-error">{{ err }}</div>
+            {% endfor %}
+        </div>
+
         <div class="form-actions">
-            <button type="button" class="btn-back" onclick="history.back()">Back</button>
+            <button type="button" class="btn-back"><a href="{% url "admin_category" %}">Back</a></button>
             <button type="submit" class="btn-save">{% if category.id %}Update Category{% else %}Save Category{% endif %}</button>
         </div>
     </form>
