--- a/Admin/templates/categorys/admin_category_form.html
+++ b/Admin/templates/categorys/admin_category_form.html
@@ -10,10 +10,11 @@
     <h2>{% if category.id %}Edit Category{% else %}Add New Category{% endif %}</h2>
     
     <form method="post" novalidate>
-          {% csrf_token %}
+        {% csrf_token %}
+
         {% if form.non_field_errors %}
             <div class="errors">
-            {{ form.non_field_errors }}
+                {{ form.non_field_errors }}
             </div>
         {% endif %}
 
@@ -21,7 +22,7 @@
             <label for="{{ form.name.id_for_label }}">Name</label>
             {{ form.name }}
             {% for err in form.name.errors %}
-            <div class="field-error">{{ err }}</div>
+                <div class="field-error">{{ err }}</div>
             {% endfor %}
         </div>
 
@@ -29,13 +30,13 @@
             <label for="{{ form.description.id_for_label }}">Description</label>
             {{ form.description }}
             {% for err in form.description.errors %}
-            <div class="field-error">{{ err }}</div>
+                <div class="field-error">{{ err }}</div>
             {% endfor %}
         </div>
 
         <div class="form-actions">
-            <button type="button" class="btn-back"><a href="{% url "admin_category" %}">Back</a></button>
-            <button type="submit" class="btn-save">{% if category.id %}Update Category{% else %}Save Category{% endif %}</button>
+            <a href="{% url "admin_category" %}" class="btn btn-secondary">Back</a>
+<button type="submit" class="btn btn-primary">{% if category.id %}Update Category{% else %}Save Category{% endif %}</button>
         </div>
     </form>
 </div>
