style : in forgot password page the login button is added In the login page added js for the password view

--- a/Admin/templates/adminAuth/forgot-password.html
+++ b/Admin/templates/adminAuth/forgot-password.html
@@ -1,14 +1,20 @@
-{% extends 'adminbase.html' %}
 {% load static %}
 
-{% block extra_css %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reset Password | Admin Panel</title>
+
     <link rel="stylesheet" href="{% static 'css/adminAuth/forgot-password.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-{% endblock extra_css %}
+</head>
 
-{% block content %}
+<body>
+
     <aside class="brand-panel">
         <div class="brand-content">
             <h2>TuckIndia.in</h2>
@@ -33,7 +39,7 @@
             </form>
 
             <div class="support-link">
-                Need help? <a href="#">Contact Support</a>
+                remember now? <a href="{% url "admin_login" %}">Login</a>
             </div>
         </div>
 
@@ -41,4 +47,6 @@
             © 2024 TuckIndia.in Admin Panel
         </footer>
     </main>
-{% endblock content %}
+
+</body>
+</html>
