--- a/Admin/templates/adminAuth/login.html
+++ b/Admin/templates/adminAuth/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Sign In - TuckIndia.in</title>
+    <title>Admin Sign In - SecondStrap</title>
     <link rel="stylesheet" href="{% static "css/adminAuth/style.css" %}">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -15,7 +15,7 @@
         
         <div class="login-panel-left">
             <div class="brand-container">
-                <h1>TuckIndia.in</h1>
+                <h1>SecondStrap</h1>
                 <p>Admin Portal</p>
             </div>
         </div>
@@ -71,7 +71,7 @@
                 </div>
 
                 <footer class="page-footer">
-                    <p>© 2024 TuckIndia.in Admin Panel</p>
+                    <p>© 2024 SecondStrap Admin Panel</p>
                 </footer>
             </div>
         </div>
