--- a/Admin/templates/adminAuth/otp-verification.html
+++ b/Admin/templates/adminAuth/otp-verification.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OTP Verification | TuckIndia Admin Portal</title>
+    <title>OTP Verification | SecondStrap Admin Portal</title>
     
     <link rel="stylesheet" href="{% static 'css/adminAuth/otp-verification.css' %}">
     
@@ -46,7 +46,7 @@
 
     <aside class="brand-panel">
         <div class="brand-content">
-            <h2>TuckIndia.in</h2>
+            <h2>SecondStrap</h2>
             <p>Admin Portal</p>
         </div>
     </aside>
@@ -108,7 +108,7 @@
         </div>
 
         <footer class="form-footer">
-            © 2024 TuckIndia.in Admin Panel
+            © 2024 SecondStrap Admin Panel
         </footer>
     </main>
 
