--- a/Admin/static/css/adminAuth/forgot-password.css
+++ b/Admin/static/css/adminAuth/forgot-password.css
@@ -35,7 +35,7 @@ body {
 
 .brand-content h2 {
     font-size: 2.5rem;
-    /* Matches "TuckIndia.in" */
+    /* Matches "SecondStrap" */
     font-weight: 700;
 }
 
